# spack-exercise

./: CMakeLists.txt  main.cpp  package.py
